create crud for trap + ws

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,8 @@
 extends layout
 
 block content
-  h1= 'There will be some instructions'
+  h1= 'Small Instructions'
+  p.flow-text Requests Trap: A tool for capture and display HTTP requests.
+  p.flow-text.
+    If you want view captured request, you should go to `localhost:3000/:trap_id/requests`.
+    There will be all requests that was captured by `localhost:3000/:trap_id route.
